feat: add JSON Schema for config validation
- Add fusedmaps.schema.json with full config structure
- Schema covers all layer types, styles, widgets, and messaging
- Add schema to package.json exports
- Add FUSEDMAPS_SCHEMA_URL constant in map_utils.py

--- a/package.json
+++ b/package.json
@@ -7,8 +7,18 @@
   "module": "dist/fusedmaps.esm.js",
   "types": "dist/types/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "fusedmaps.schema.json"
   ],
+  "exports": {
+    ".": {
+      "import": "./dist/fusedmaps.esm.js",
+      "require": "./dist/fusedmaps.umd.js",
+      "types": "./dist/types/index.d.ts"
+    },
+    "./schema": "./fusedmaps.schema.json",
+    "./schema.json": "./fusedmaps.schema.json"
+  },
   "scripts": {
     "build": "rollup -c",
     "build:watch": "rollup -c -w",
